added injection on factory