@@ -15,7 +15,7 @@
     </properties>
     <dependencies>
 
-            <!-- mockare i test -->
+        <!-- mockare i test -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -85,13 +85,6 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>
-                        <arg>-Xplugin:ImageAccessPlugin</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>ch.supsi</groupId>
@@ -99,6 +92,9 @@
                             <version>1.0-SNAPSHOT</version>
                         </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>-Xplugin:ImageAccessPlugin</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
